--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"lint": "tsc --noEmit && eslint src/**/*.{js,jsx,ts,tsx} --cache --max-warnings=0",
-		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
+		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.15",
